# dreamtides

./: --full-page  .cursorrules  .gitattributes  .gitignore  .prettierignore  .pyre_configuration  AGENTS.md  AGENTS_GPT.md  AGENTS_OPUS.md  ENACT_PLAN.md  LICENSE.txt  PLAN.md  README.md  ai_decisions.jsonl  banana_test.txt  cards_anonymized.txt  dreamcaller_rules_text.txt  justfile  package-lock.json  package.json  pipe.md  prevent  schema.json  test_auto_task.txt
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
engine/src/core_data/: Cargo.toml
engine/src/plugin/: Cargo.toml
engine/src/schema_generator/: Cargo.toml
rules_engine/: .cursorrules  .gitignore  .rustfmt.toml  Cargo.toml  clippy.toml  delete_banana_testtxt_file.md  please_create_file_named_bananatesttxt_w.md  tabula
rules_engine/.cargo/: config.toml
rules_engine/.closed/: delete_banana_testtxt_file.md  please_create_file_named_bananatesttxt_w.md
rules_engine/benchmarks/: Cargo.toml
rules_engine/benchmarks/battle/: Cargo.toml
rules_engine/benchmarks/benches/: ability_text_examples.txt  battle_state.md  benchmarks.rs  old_playout_benchmarks.rs  parser_benchmarks.rs  playout_benchmarks.rs
rules_engine/benchmarks/benchmark_battles/: Cargo.toml
rules_engine/benchmarks/lattice/: Cargo.toml
rules_engine/benchmarks/parser/: Cargo.toml
rules_engine/benchmarks/parser_benchmarks/: Cargo.toml
rules_engine/benchmarks/parser_v2/: Cargo.toml
rules_engine/docker/: bench.Dockerfile
rules_engine/docs/: ability_serializer_design_doc.md  ability_serializer_localization.md  ability_serializer_localization_design_doc.md  adding_new_effects.md  adding_new_triggers.md  adding_parsers.md  benchmarks.md  environment_setup.md  llmc.md  llmc2-appendix-claude-state.md  llmc2-appendix-error-recovery.md  llmc2-appendix-tmux.md  llmc2.md  llmc_chaos_monkey.md  llmc_design_document.md  llmc_hook_prompts.md  llmc_hooks.md  llmc_unified.md  parser_2_audit.md  parser_data_types.md  parser_directives.md  parser_implementation_todo.md  parser_v2_design.md  prompt_pool.txt  rules_text_sorted.json  serializer_task_list.md  serializer_variable_extraction_plan.md  span_parser_v2.md  task_tools.md
rules_engine/docs/lattice/: appendix_ai_friendliness.md  appendix_ai_integration.md  appendix_beads_analysis.md  appendix_benchmarking.md  appendix_chaos_monkey.md  appendix_cli_structure.md  appendix_code_review.md  appendix_commands.md  appendix_configuration.md  appendix_context_algorithm.md  appendix_context_optimization.md  appendix_context_retrieval.md  appendix_deleted_tasks.md  appendix_doctor.md  appendix_error_handling.md  appendix_file_layout.md  appendix_git_edge_cases.md  appendix_git_integration.md  appendix_hierarchy_relationships.md  appendix_id_system.md  appendix_indexing.md  appendix_indexing_performance.md  appendix_indexing_strategy.md  appendix_issue_tracking.md  appendix_linking_system.md  appendix_linter.md  appendix_markdown_linter_integration.md  appendix_overview.md  appendix_overview_command.md  appendix_push_pull_analysis.md  appendix_semantic_search.md  appendix_session_management.md  appendix_startup_operations.md  appendix_task_templates.md  appendix_task_tracking.md  appendix_testing_strategy.md  appendix_workflow.md  lattice_design.md  lattice_implementation_plan.md
rules_engine/docs/rlf/: APPENDIX_DREAMTIDES_ADOPTION.md  APPENDIX_RUNTIME_INTERPRETER.md  APPENDIX_RUSSIAN_TRANSLATION.md  APPENDIX_RUST_INTEGRATION.md  APPENDIX_SPANISH_TRANSLATION.md  APPENDIX_STDLIB.md  DESIGN.md
rules_engine/docs/rlt/: APPENDIX_RUSSIAN_TRANSLATION.md  APPENDIX_RUST_INTEGRATION.md  APPENDIX_SPANISH_TRANSLATION.md  APPENDIX_STDLIB.md  DESIGN.md
rules_engine/docs/tabula/: milestone_0.md  milestone_1.md  milestone_10.md  milestone_11.md  milestone_12.md  milestone_13.md  milestone_14.md  milestone_15.md  milestone_16.md  milestone_17.md  milestone_2.md  milestone_3.md  milestone_4.md  milestone_5.md  milestone_6.md  milestone_7.md  milestone_8.md  milestone_9.md  tabula_v2_design_document.md
rules_engine/scripts/: analyze_review_perf.py  apply_beads_template.py  bd_ready_tree.py  beads_template.txt  benchmark.py  benchmark_on_linux.py  check_benchmark_variance.py  grid_generator.py  profile_benchmark_binary.py  review_perf_log.py  review_perf_runner.py  review_perf_scripts_test.py  review_runner.py  review_scope.py  review_scope_config.json  run_cargo_test.sh  run_ready_task.py  strip_commit_messages.py  symlinks.py  task_runner.py
rules_engine/scripts/review/: README.md  profile_benchmark_binary.py  review_runner.py  review_scope.py  review_scope_config.json
rules_engine/src/ability_data/: Cargo.toml
rules_engine/src/action_data/: Cargo.toml
rules_engine/src/action_data_old/: Cargo.toml
rules_engine/src/actions/: Cargo.toml
rules_engine/src/agent_data/: Cargo.toml
rules_engine/src/agents/: Cargo.toml
rules_engine/src/ai_agents/: Cargo.toml
rules_engine/src/ai_agents_old/: Cargo.toml
rules_engine/src/ai_core/: Cargo.toml
rules_engine/src/ai_data/: Cargo.toml
rules_engine/src/ai_game_integration/: Cargo.toml
rules_engine/src/ai_game_integration_old/: Cargo.toml
rules_engine/src/ai_matchup/: Cargo.toml
rules_engine/src/ai_monte_carlo/: Cargo.toml
rules_engine/src/ai_strategic/: Cargo.toml
rules_engine/src/ai_testing/: Cargo.toml
rules_engine/src/ai_tree_search/: Cargo.toml
rules_engine/src/ai_uct/: Cargo.toml
rules_engine/src/assert_with/: Cargo.toml
rules_engine/src/asset_paths/: Cargo.toml
rules_engine/src/battle_data/: Cargo.toml
rules_engine/src/battle_data_old/: Cargo.toml
rules_engine/src/battle_mutations/: Cargo.toml
rules_engine/src/battle_mutations_old/: Cargo.toml
rules_engine/src/battle_queries/: Cargo.toml
rules_engine/src/battle_queries_old/: Cargo.toml
rules_engine/src/battle_state/: Cargo.toml
rules_engine/src/client_test_scenarios/: Cargo.toml
rules_engine/src/core_data/: Cargo.toml
rules_engine/src/database/: Cargo.toml
rules_engine/src/database_old/: Cargo.toml
rules_engine/tests/: Cargo.toml
(+4033 files in other folders)
