[workspace]
members = ["benchmarks/*", "src/*", "tests/*"]
resolver = "2"

[workspace.dependencies]
android_log-sys = "0.3"
anyhow = "1"
ariadne = "0.2"
atomic-write-file = "0.2"
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.5"
backtrace = "0.3"
bit-set = { version = "0.8", features = ["serde"] }
bit-vec = "0.8"
bon = "3"
chrono = "0.4"
chumsky = "0.10"
clap = { version = "4", features = ["derive"] }
convert_case = "0.8"
criterion = { version = "0.5.1", features = ["html_reports"] }
ego-tree = "0.10"
either = "1"
enum-iterator = "2"
enumset = { version = "1", features = ["serde"] }
fastrand = "2"
fluent = "0.17"
fluent-bundle = "0.16"
google-sheets4 = "6"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
iai-callgrind = "0.16"
insta = { version = "1", features = ["ron"] }
ordered-float = "5"
parking_lot = "0.12"
petgraph = "0.8"
proptest = "1"
rand = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
rayon = "1"
regex = "1"
ron = "0.8"
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_with = { version = "3" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-error = "0.2"
tracing-forest = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
yup-oauth2 = "12"
zip = "4"

[workspace.lints.clippy]
#redundant_test_prefix = "deny"
#return_and_then = "deny"
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
enum_glob_use = "deny"
explicit_into_iter_loop = "deny"
flat_map_option = "deny"
fn_params_excessive_bools = "deny"
from_iter_instead_of_collect = "deny"
implicit_clone = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
macro_use_imports = "deny"
match_wildcard_for_single_variants = "deny"
mut_mut = "deny"
needless_continue = "deny"
needless_for_each = "deny"
option_option = "deny"
redundant_type_annotations = "deny"
ref_option_ref = "deny"
renamed_function_params = "deny"
same_name_method = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
trait_duplication_in_bounds = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"

[profile.release]
strip = false

[profile.release-with-debug]
inherits = "release"
debug = true
