[package]
name = "dreamcaller"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dreamcaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core_data = { path = "../../engine/src/core_data" }
display_data = { path = "../../engine/src/display_data" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.20", features = ["derive", "uuid"] }
specta-typescript = "=0.0.7"
specta-util = "=0.0.7"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
