[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false
test = false
doctest = false

[dependencies]
action_data_old = { path = "../src/action_data_old", version = "0.0.0" }
actions = { path = "../src/actions", version = "0.0.0" }
ai_agents = { path = "../src/ai_agents", version = "0.0.0" }
ai_agents_old = { path = "../src/ai_agents_old", version = "0.0.0" }
ai_data = { path = "../src/ai_data", version = "0.0.0" }
battle_data_old = { path = "../src/battle_data_old", version = "0.0.0" }
battle_mutations = { path = "../src/battle_mutations", version = "0.0.0" }
battle_queries = { path = "../src/battle_queries", version = "0.0.0" }
battle_queries_old = { path = "../src/battle_queries_old", version = "0.0.0" }
battle_state = { path = "../src/battle_state", version = "0.0.0" }
core_data = { path = "../src/core_data", version = "0.0.0" }
game_creation = { path = "../src/game_creation", version = "0.0.0" }
game_creation_old = { path = "../src/game_creation_old", version = "0.0.0" }
parser = { path = "../src/parser", version = "0.0.0" }

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
