[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false
test = false
doctest = false

[dependencies]
action_data_old = { path = "../src/action_data_old" }
actions = { path = "../src/actions" }
ai_agents = { path = "../src/ai_agents" }
ai_agents_old = { path = "../src/ai_agents_old" }
ai_data = { path = "../src/ai_data" }
battle_data_old = { path = "../src/battle_data_old" }
battle_mutations = { path = "../src/battle_mutations" }
battle_queries = { path = "../src/battle_queries" }
battle_queries_old = { path = "../src/battle_queries_old" }
battle_state = { path = "../src/battle_state" }
core_data = { path = "../src/core_data" }
game_creation = { path = "../src/game_creation" }
game_creation_old = { path = "../src/game_creation_old" }
parser = { path = "../src/parser" }
tracing_macros = { path = "../src/tracing_macros" }

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
