[package]
name = "core_data"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
derive_more = { version = "1.0", features = ["full"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.20", features = ["derive","uuid"] }
specta-typescript = "=0.0.7"
specta-util = "=0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
uuid = "1"