[package]
name = "plugin"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/plugin.rs"
test = false
doctest = false
crate-type = ["cdylib", "staticlib"]

[dependencies]
core_data = { path = "../core_data" }
display_data = { path = "../display_data" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
