[package]
name = "schema_generator"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "schema_generator"
test = false
doctest = false
bench = false

[dependencies]
core_data = { path = "../core_data" }
display_data = { path = "../display_data" }

schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"