[package]
name = "lattice_benchmarks"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[[bench]]
name = "lattice_benchmarks"
harness = false
test = false
doctest = false

[dependencies]
lattice = { path = "../../src/lattice" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
