[package]
name = "lattice_benchmarks"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[[bench]]
name = "lattice_benchmarks"
harness = false
test = false
doctest = false

[[bench]]
name = "index_bench"
harness = false
test = false
doctest = false

[[bench]]
name = "document_bench"
harness = false
test = false
doctest = false

[[bench]]
name = "query_bench"
harness = false
test = false
doctest = false

[dependencies]
lattice = { path = "../../src/lattice" }

fastrand = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
criterion = { workspace = true }
