[package]
name = "parser_benchmarks"
version = "0.0.0"
edition = "2024"
[lints]
workspace = true

# [[bench]]
# name = "parser_benchmarks"
# harness = false
# test = false
# doctest = false

[dependencies]
ai_agents = { path = "../../src/ai_agents" }
ai_data = { path = "../../src/ai_data" }
battle_mutations = { path = "../../src/battle_mutations" }
battle_queries = { path = "../../src/battle_queries" }
battle_state = { path = "../../src/battle_state" }
core_data = { path = "../../src/core_data" }
game_creation = { path = "../../src/game_creation" }
parser = { path = "../../src/parser" }

rand = { workspace = true }
rand_xoshiro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
