[package]
name = "parser_benchmarks"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ability_data = { path = "../../src/ability_data" }
core_data = { path = "../../src/core_data" }
parser = { path = "../../src/parser" }

chumsky = { workspace = true }
criterion = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "full_pipeline_bench"
harness = false
