[package]
name = "action_data"
version = "0.0.0"
edition = "2021"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ai_data = { path = "../ai_data" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }

schemars = { workspace = true }
serde = { version = "1", features = ["derive"] }