[package]
name = "actions"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
action_data = { path = "../action_data" }
assert_with = { path = "../assert_with" }
battle_data = { path = "../battle_data" }
battle_mutations = { path = "../battle_mutations" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }

tracing = "0.1"