[package]
name = "actions"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
action_data_old = { path = "../action_data_old" }
assert_with = { path = "../assert_with" }
battle_data_old = { path = "../battle_data_old" }
battle_mutations_old = { path = "../battle_mutations_old" }
battle_queries_old = { path = "../battle_queries_old" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }

tracing = "0.1"