[package]
name = "agents"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
action_data = { path = "../action_data" }
agent_data = { path = "../agent_data" }
battle_data = { path = "../battle_data" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
core_data = { path = "../core_data" }

rand = "0.9"