[package]
name = "ai_agents"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
action_data = { path = "../action_data" }
ai_core = { path = "../ai_core" }
ai_data = { path = "../ai_data" }
ai_game_integration_old = { path = "../ai_game_integration_old" }
ai_monte_carlo = { path = "../ai_monte_carlo" }
ai_tree_search = { path = "../ai_tree_search" }
assert_with = { path = "../assert_with" }
battle_data_old = { path = "../battle_data_old" }
battle_mutations_old = { path = "../battle_mutations_old" }
battle_queries_old = { path = "../battle_queries_old" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }

rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"