[package]
name = "ai_agents"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
ai_core = { path = "../ai_core" }
ai_data = { path = "../ai_data" }
ai_game_integration = { path = "../ai_game_integration" }
ai_monte_carlo = { path = "../ai_monte_carlo" }
ai_tree_search = { path = "../ai_tree_search" }
assert_with = { path = "../assert_with" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }
tracing_macros = { path = "../tracing_macros" }

rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"