[package]
name = "ai_agents"
version = "0.0.0"
edition = "2024"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ai_data = { path = "../ai_data" }
ai_uct = { path = "../ai_uct" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }

ordered-float = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }