[package]
name = "ai_game_integration_old"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
actions = { path = "../actions", version = "0.0.0" }
action_data = { path = "../action_data", version = "0.0.0" }
ai_core = { path = "../ai_core", version = "0.0.0" }
ai_monte_carlo = { path = "../ai_monte_carlo", version = "0.0.0" }
ai_tree_search = { path = "../ai_tree_search", version = "0.0.0" }
assert_with = { path = "../assert_with", version = "0.0.0" }
battle_data_old = { path = "../battle_data_old", version = "0.0.0" }
battle_mutations_old = { path = "../battle_mutations_old", version = "0.0.0" }
battle_queries_old = { path = "../battle_queries_old", version = "0.0.0" }
core_data = { path = "../core_data", version = "0.0.0" }
