[package]
name = "run_matchup"
version = "0.0.0"
license = "Apache-2.0"
edition = "2024"
[lints]
workspace = true


[[bin]]
name = "run_matchup"
path = "src/run_matchup.rs"
test = false

[dependencies]
ai_agents = { path = "../ai_agents" }
ai_data = { path = "../ai_data" }
battle_state = { path = "../battle_state" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
core_data = { path = "../core_data" }
game_creation = { path = "../game_creation" }
logging = { path = "../logging" }
state_provider = { path = "../state_provider" }

clap = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }