[package]
name = "run_matchup"
version = "0.0.0"
license = "Apache-2.0"
edition = "2024"
[lints]
workspace = true


[[bin]]
name = "run_matchup"
path = "src/run_matchup.rs"
test = false

[dependencies]
ai_agents = { path = "../ai_agents" }
ai_data = { path = "../ai_data" }
ai_strategic = { path = "../ai_strategic" }
ai_uct = { path = "../ai_uct" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
game_creation = { path = "../game_creation" }
logging = { path = "../logging" }
tabula_data = { path = "../tabula_data" }
tabula_generated = { path = "../tabula_generated" }

backtrace = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "collect_strategic_v3_dataset"
path = "src/collect_strategic_v3_dataset.rs"
test = false

[[bin]]
name = "collect_monte_carlo_hybrid_v1_dataset"
path = "src/collect_monte_carlo_hybrid_v1_dataset.rs"
test = false
