[package]
name = "ai_strategic"
version = "0.0.0"
edition = "2024"
[lints]
workspace = true


[lib]
doctest = false
test = false

[dependencies]
ai_uct = { path = "../ai_uct" }
battle_mutations = { path = "../battle_mutations" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }

chrono = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
