[package]
name = "ai_testing"
version = "0.0.0"
description = "Tools for testing AI implementations"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "run_nim"
path = "scripts/run_nim.rs"
test = false

[dependencies]
ai_core = { path = "../ai_core", version = "0.0.0" }
ai_game_integration = { path = "../ai_game_integration", version = "0.0.0" }
ai_monte_carlo = { path = "../ai_monte_carlo", version = "0.0.0" }
ai_tree_search = { path = "../ai_tree_search", version = "0.0.0" }
battle_mutations = { path = "../battle_mutations", version = "0.0.0" }
battle_queries = { path = "../battle_queries", version = "0.0.0" }
core_data = { path = "../core_data", version = "0.0.0" }

clap = {version = "3.2", features = ["derive"]}

