[package]
name = "ai_uct"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
ai_core = { path = "../ai_core", version = "0.0.0" }
ai_monte_carlo = { path = "../ai_monte_carlo", version = "0.0.0" }
ai_tree_search = { path = "../ai_tree_search", version = "0.0.0" }
battle_state = { path = "../battle_state", version = "0.0.0" }
battle_mutations = { path = "../battle_mutations", version = "0.0.0" }
battle_queries = { path = "../battle_queries", version = "0.0.0" }
core_data = { path = "../core_data", version = "0.0.0" }
tracing_macros = { path = "../tracing_macros", version = "0.0.0" }

ego-tree = "0.10"
ordered-float = "5"
petgraph = "0.8"
rand = "0.9"
rand_xoshiro = "0.7"
rayon = "1"
tracing = "0.1"