[package]
name = "ai_uct"
version = "0.0.0"
license = "Apache-2.0"
edition = "2024"
[lints]
workspace = true


[lib]
doctest = false
test = false

[dependencies]
battle_state = { path = "../battle_state", version = "0.0.0" }
battle_mutations = { path = "../battle_mutations", version = "0.0.0" }
battle_queries = { path = "../battle_queries", version = "0.0.0" }
core_data = { path = "../core_data", version = "0.0.0" }

ego-tree = { workspace = true }
ordered-float = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }