[package]
name = "assert_with"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/assert_with.rs"
doctest = false
bench = false

[dependencies]
battle_data = { path = "../battle_data" }
core_data = { path = "../core_data" }
logging = { path = "../logging" }

rand_xoshiro = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }