[package]
name = "battle_data"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
agent_data = { path = "../agent_data" }
core_data = { path = "../core_data" }

enum-iterator = "2.1"
enumset = { version = "1.1", features = ["serde"] }
rand = "0.9"
rand_xoshiro = "0.7"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
slotmap = "1.0"