[package]
name = "battle_data_old"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
ai_data = { path = "../ai_data" }
core_data = { path = "../core_data" }

enum-iterator = "2"
enumset = { version = "1", features = ["serde"] }
rand = "0.9"
rand_xoshiro = "0.7"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
slotmap = "1"
strum = "0.27"
strum_macros = "0.27"
uuid = "1"