[package]
name = "battle_mutations"
version = "0.0.0"
edition = "2021"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
tracing_macros = { path = "../tracing_macros" }

bit-set = "0.8"
rand = "0.9"
rand_xoshiro = "0.7"
tracing = "0.1"
