[package]
name = "battle_mutations"
version = "0.0.0"
edition = "2024"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
battle_queries = { path = "../battle_queries" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }

bit-set = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
tracing = { workspace = true }
