[package]
name = "battle_queries"
version = "0.0.0"
edition = "2021"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }

bit-set = "0.8"
fastrand = "2"
rand = "0.9"
strum = "0.27"
strum_macros = "0.27"
tracing = "0.1"