[package]
name = "battle_queries"
version = "0.0.0"
edition = "2021"
[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
display_data = { path = "../display_data" }

bit-set = "0.8"
chrono = "0.4"
fastrand = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
tracing = "0.1"