[package]
name = "battle_queries"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true


[lib]
test = false
doctest = false
bench = false

[dependencies]
ability_data = { path = "../ability_data" }
battle_state = { path = "../battle_state" }
core_data = { path = "../core_data" }
display_data = { path = "../display_data" }

bit-set = { workspace = true }
chrono = { workspace = true }
fastrand = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
